--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>Chris Lee</title>
 	<link rel="stylesheet" type="text/css" href="style.css" media="all" />
-	<link href='http://fonts.googleapis.com/css?family=Vollkorn:regular,italic&subset=latin' rel='stylesheet' type='text/css'>
 </head>
 <body id="index">
 	<div id="header">
@@ -45,6 +44,8 @@
 		</div>
 	</div>
 
+	<script type="text/javascript" src="http://use.typekit.com/kdu8mwb.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-19583432-1']);
