--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"> 
     <meta content="I study computer science at Carnegie Mellon University. I enjoy building stuff on the web. This is some of my work." name="description">
-    <title>Chris Lee<%= @page == 'index' ? '' : ' | ' + @page.capitalize %></title>
+    <title>Chris Lee</title>
     <link href="//fonts.googleapis.com/css?family=Lato:regular,bold" rel="stylesheet" type="text/css" />
     <link href="//fonts.googleapis.com/css?family=Cambria:regular,italic,bold" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
