Added Kittygram, updated Sympony screenshot.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
           <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
           <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-          </li></ul>
-        </ul>
+        </ul></li>
+      </ul>
       </div>
       <div id="content">
         <!-- Main site content -->
@@ -69,6 +69,25 @@
             </ul>
           </div>
           <img src="work/stik.png" alt="Stik" />
+        </div>
+	      <div class="item">
+          <div class="description">
+            <h3>Kittygram! <a href="http://kittygram.heroku.com" title="Kittygram!" target="_blank">&rarr;</a></h3>
+            <p>Everyone loves cat photos. Don't you love cat photos?</p>
+
+            <p>Kittygram! is a simple, fun way to view live cat photos from <a href="http://instagram.com/" title="Instagram" target="_blank">Instagram</a> users around the world.</p>
+
+						<p>Kittygram! is open source. You can <a href="https://github.com/cleercode/kittygram" title="Kittygram! on GitHub" target="_blank">check out the source code on GitHub</a>.</p>
+
+            <h4>Technologies</h4>
+            <ul>
+              <li>Ruby &amp; Sinatra</li>
+              <li>jQuery</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+          <img src="work/kittygram.png" alt="Kittygram" />
         </div>
         <div class="item">
           <div class="description">
