New email address

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </h2>
       </div>
       <ul id="links">
-        <li id="email"><h4>Email</h4> <a href="mailto:cleer@cmu.edu">cleer@cmu.edu</a></li>
+        <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
         <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
         <li id="elsewhere"><h4>Elsewhere</h4> <ul>
           <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
@@ -77,7 +77,7 @@
 
             <p>Kittygram! is a simple, fun way to view live cat photos from <a href="http://instagram.com/" title="Instagram" target="_blank">Instagram</a> users around the world.</p>
 
-						<p>Kittygram! is open source. You can <a href="https://github.com/cleercode/kittygram" title="Kittygram! on GitHub" target="_blank">check out the source code on GitHub</a>.</p>
+						<p>And it's open source. You can <a href="https://github.com/cleercode/kittygram" title="Kittygram! on GitHub" target="_blank">check out the source code on GitHub</a>.</p>
 
             <h4>Technologies</h4>
             <ul>
@@ -135,7 +135,7 @@
         
       </div>
       <div id="footer">
-        <p>Thanks for visiting! <a href="mailto:cleer@cmu.edu">Would you like to contact me?</a></p>
+        <p>Thanks for visiting! <a href="mailto:chris@chrsl.net">Would you like to contact me?</a></p>
         <a href="#" id="back_to_top" title="Back to the top">&uarr;</a>
       </div>
 
