--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
           </div>
           <img src="work/stik.png" alt="Stik" />
         </div>
+				<div class="item">
+          <div class="description">
+            <h3>Coursel <a href="http://chrsl.net/coursel" title="Coursel" target="_blank">&rarr;</a></h3>
+            <p>Calculating GPA can be surprisingly painful given that all it requires is simple arithmetic. Coursel's built to automate this process. It's a "scratch my own itch" kind of thing.</p>
+
+						<p>It's fully client-side and uses some interesting technologies, which you can explore on <a href="https://github.com/cleercode/coursel" title="Coursel on GitHub" target="_blank">check out the source code on GitHub</a>.</p>
+
+            <h4>Technologies</h4>
+            <ul>
+							<li>Backbone.js</li>
+							<li>localStorage</li>
+              <li>jQuery</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+          <img src="work/coursel.png" alt="Coursel" />
+        </div>
 	      <div class="item">
           <div class="description">
             <h3>Kittygram! <a href="http://kittygram.heroku.com" title="Kittygram!" target="_blank">&rarr;</a></h3>
@@ -82,12 +100,13 @@
             <h4>Technologies</h4>
             <ul>
               <li>Ruby &amp; Sinatra</li>
+              <li>Redis</li>
               <li>jQuery</li>
               <li>HTML</li>
               <li>CSS</li>
             </ul>
           </div>
-          <img src="work/kittygram.png" alt="Kittygram" />
+          <img src="work/kittygram.png" alt="Kittygram!" />
         </div>
         <div class="item">
           <div class="description">
@@ -119,7 +138,7 @@
         <div class="item">
           <div class="description">
             <h3>Symphony <a href="http://symphony.chrsl.net" title="Symphony" target="_blank">&rarr;</a></h3>
-            <p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/" title="Yahoo! Hack U" target="_blank">Hack U</a> competition, I developed this music recommendation web application in less than a full day. The simple grid of recommendations displays a large number of recommendations consisely and attractively.
+            <p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/" title="Yahoo! Hack U" target="_blank">Hack U</a> competition, I developed this music recommendation web application in less than a full day. The simple grid of recommendations displays a large number of recommendations concisely and attractively.</p>
 
             <h4>Technologies</h4>
             <ul>
