--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="item">
           <div class="description">
             <h3>Coursel <a href="http://chrsl.net/coursel" title="Coursel" target="_blank">&rarr;</a></h3>
-            <p>Calculating GPA can be surprisingly painful given that all it requires is simple arithmetic. Coursel's built to automate this process. It's a "scratch my own itch" kind of thing.</p>
+            <p>Calculating GPA can be surprisingly painful even though all it requires is simple arithmetic. Coursel's built to automate this process. It's a "scratch my own itch" kind of thing.</p>
 
 						<p>It's fully client-side and uses some interesting technologies, which you can explore on <a href="https://github.com/cleercode/coursel" title="Coursel on GitHub" target="_blank">check out the source code on GitHub</a>.</p>
 
