--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h3>Coursel <a href="http://chrsl.net/coursel" title="Coursel" target="_blank">&rarr;</a></h3>
             <p>Calculating GPA can be surprisingly painful even though all it requires is simple arithmetic. Coursel's built to automate this process. It's a "scratch my own itch" kind of thing.</p>
 
-						<p>It's fully client-side and uses some interesting technologies, which you can explore on <a href="https://github.com/cleercode/coursel" title="Coursel on GitHub" target="_blank">check out the source code on GitHub</a>.</p>
+						<p>It's fully client-side and uses some interesting technologies, which you can <a href="https://github.com/cleercode/coursel" title="Coursel on GitHub" target="_blank">explore on GitHub</a>.</p>
 
             <h4>Technologies</h4>
             <ul>
