Removing Symphony link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
         <div class="item">
           <div class="description">
-            <h3>Symphony <a href="http://symphony.chrsl.net" title="Symphony" target="_blank">&rarr;</a></h3>
+            <h3>Symphony</h3>
             <p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/" title="Yahoo! Hack U" target="_blank">Hack U</a> competition, I developed this music recommendation web application in less than a full day. The simple grid of recommendations displays a large number of recommendations concisely and attractively.</p>
 
             <h4>Technologies</h4>
