--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div id="content">
         <!-- Main site content -->
-        
+  
         <div class="item">
           <div class="description">
             <h3>Grapevin <a href="http://grapev.in" title="Grapevin" target="_blank">&rarr;</a></h3>
@@ -87,6 +87,21 @@
           </div>
           <img src="work/coursel.png" alt="Coursel" />
         </div>
+          <div class="item">
+          <div class="description">
+            <h3>Asian Christian Fellowship <a href="http://acfpcc.org" title="Asian Christian Fellowship" target="_blank">&rarr;</a></h3>
+            <p>Suffice it to say that I believe in Jesus Christ as the God of heaven and earth and the necessary salvation of the human race. This site was designed and built for a college Christian fellowship.</p>
+
+            <p>It uses CSS3 and web fonts to a great degree, with minimal images. With the exception of some minor polishing, the entire design and code process took a day. I constructed a Tumblr blog theme for the announcements page to match the static content.</p>
+
+            <h4>Technologies</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+          <img src="work/acf.png" alt="Asian Christian Fellowship" />
+        </div>     
         <div class="item">
           <div class="description">
             <h3>Kittygram! <a href="http://kittygram.heroku.com" title="Kittygram!" target="_blank">&rarr;</a></h3>
