--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
   
         <div class="item">
           <div class="description">
+            <h3>Tripi</h3>
+            <p>Tripi was my <a href="http://developer.yahoo.com/hacku/" title="Yahoo! Hack U" target="_blank">Yahoo! Hack U</a> 2011 project. In 24 hours, three other students and I devised and built this travel itinerary planner. I worked all around the project on front-end and back-end development, logo and user interface design, project vision, and team management.</p>
+
+            <p>Centered around simplicity and automation, Tripi provides useful metadata for destinations and suggesting relevant nearby places as the user completes their itinerary.
+
+            <h4>Technologies</h4>
+            <ul>
+              <li>JavaScript</li>
+              <li>Node.js</li>
+              <li>MongoDB</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Illustrator</li>
+            </ul>
+          </div>
+          <img src="work/tripi.png" alt="Tripi" />
+        </div>
+        <div class="item">
+          <div class="description">
             <h3>Grapevin <a href="http://grapev.in" title="Grapevin" target="_blank">&rarr;</a></h3>
             <p>Grapevin's my current project to allow people to express themselves through the music they enjoy. It allows users to easily create an <a href="http://grapev.in/chris" title="Chris Lee's playlist on Grapevin" target="_blank">interactive playlist of their favorite songs</a> to share with their friends.</p>
 
