--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <span id="tagline">Code &amp; Design</span>
         </h1>
         <h2>
-          I study computer science at Carnegie Mellon University.<br />I enjoy building stuff on the web.<br/>This is some of my work.
+          I study human-computer interaction at Carnegie Mellon University.<br />I enjoy building stuff on the web.<br/>This is some of my work.
         </h2>
       </div>
       <ul id="links">
