--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
         <div class="item">
           <div class="description">
-            <h3>Grapevin <a href="http://grapev.in" title="Grapevin" target="_blank">&rarr;</a></h3>
-            <p>Grapevin's my current project to allow people to express themselves through the music they enjoy. It allows users to easily create an <a href="http://grapev.in/chris" title="Chris Lee's playlist on Grapevin" target="_blank">interactive playlist of their favorite songs</a> to share with their friends.</p>
+            <h3>Grapevin</h3>
+            <p>Grapevin was a project to allow people to express themselves through the music they enjoy. It allowed users to easily create an interactive playlist of their favorite songs to share with their friends. After the rise of other social music services like Spotify and Rdio, I decided to cease development of Grapevin.</p>
 
             <p>You can read a little interview about my vision for Grapevin <a href="http://www.madebyone.com/grapevin" title="Grapevin on Made By One" target="_blank">here</a>.</p>
 
