--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     <meta content="I study computer science at Carnegie Mellon University. I enjoy building stuff on the web. This is some of my work." name="description">
     <title>Chris Lee</title>
-    <link href="//fonts.googleapis.com/css?family=Lato:regular,bold" rel="stylesheet" type="text/css" />
+    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold%7CFjord+One" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
