--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
   
         <div class="item">
           <div class="description">
+            <h3>Design for Hackers</h3>
+            <p>In the week leading up to the <a href="http://www.tartanhacks.com">TartanHacks</a> at Carnegie Mellon, I delivered this presentation introducing web design concepts to an audience of hackathon participants, primarily computer science students.
+          </div>
+          <div class="presentation">
+            <script src="http://speakerdeck.com/embed/4f2df9465fd7de001f008eae.js"></script>
+          </div>
+        </div>  
+        <div class="item">
+          <div class="description">
             <h3>Tripi</h3>
             <p>Tripi was my <a href="http://developer.yahoo.com/hacku/" title="Yahoo! Hack U" target="_blank">Yahoo! Hack U</a> 2011 project. In 24 hours, three other students and I devised and built this travel itinerary planner. I worked all around the project on front-end and back-end development, logo and user interface design, project vision, and team management.</p>
 
