Update presentation title

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
         <div class="item">
           <div class="description">
-            <h3>Design for Hackers</h3>
+            <h3>Design for Programmers</h3>
             <p>In the week leading up to the <a href="http://www.tartanhacks.com">TartanHacks</a> at Carnegie Mellon, I delivered this presentation introducing web design concepts to an audience of hackathon participants, primarily computer science students.</p>
             <p>Both the visuals and the content of the presentation were made from scratch and reflect some of the important lessons I've learned in the past years as I've explored the world of design.</p>
           </div>
