--- a/index.html
+++ b/index.html
@@ -2,215 +2,242 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8"> 
-    <meta content="I study computer science at Carnegie Mellon University. I enjoy building stuff on the web. This is some of my work." name="description">
+    <meta content="Interaction designer" name="description">
     <title>Chris Lee</title>
-    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold%7CFjord+One" rel="stylesheet" type="text/css" />
+    <link href="http://fonts.googleapis.com/css?family=Lato:regular,bold,italic|Roboto:regular,bold" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="header">
-      <div id="intro">
-        <h1>
+    <header>
+      <div id="logo">
+        <div id="pulse"></div>
+        <a href="index.html" id="circle">
           <span id="name">Chris Lee</span>
-          <span id="tagline">Code &amp; Design</span>
-        </h1>
-        <h2>
-          I study human-computer interaction at Carnegie Mellon University.<br />I enjoy building stuff on the web.<br/>This is some of my work.
-        </h2>
+          <span id="tagline">Design &amp; Code</span>
+        </a>
       </div>
-      <ul id="links">
-        <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
-        <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
-        <li id="elsewhere"><h4>Elsewhere</h4> <ul>
-          <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
-          <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
-          <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
-          <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
-        </ul></li>
-      </ul>
+    </header>
+
+    <!-- Main site content -->
+    <div id="content">
+      <div id="current">
+        <div class="item">
+          <div class="cover">
+            <div class="buttons">
+              <a href="snappy/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
+          </div>
+          <div class="heading">
+            <h1>Snappy</h1>
+            <p class="type">Web App</p>
+          </div>
+          <img src="snappy/thumb.png" alt="Snappy" />
+        </div>
+        <div class="item">
+          <div class="cover">
+            <div class="buttons double">
+              <a href="gospel/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="http://chrsl.net/gospel/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+            </div>
+          </div>
+          <div class="heading">
+            <h1>The Gospel</h1>
+            <p class="type">Website</p>
+          </div>
+          <img src="gospel/thumb.png" alt="The Gospel" />
+        </div>
+        <div class="item">
+          <div class="cover">
+            <div class="buttons double">
+              <a href="designforprogrammers/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="https://speakerdeck.com/u/cleer/p/design-for-programmers" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+            </div>
+          </div>
+          <div class="heading">
+            <h1>Design for Programmers</h1>
+            <p class="type">Presentation</p>
+          </div>
+          <img src="designforprogrammers/thumb.png" alt="Design for Programmers" />
+        </div>
+        <div class="item">
+          <div class="cover">
+            <div class="buttons double">
+              <a href="coursel/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="http://coursel.net/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+            </div>
+          </div>
+          <div class="heading">
+            <h1>Coursel</h1>
+            <p class="type">Web App</p>
+          </div>
+          <img src="coursel/thumb.png" alt="Coursel" />
+        </div>
+        <div class="item">
+          <div class="cover">
+            <div class="buttons">
+              <a href="grapevin/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
+          </div>
+          <div class="heading">
+            <h1>Grapevin</h1>
+            <p class="type">Web app</p>
+          </div>
+          <img src="grapevin/thumb.png" alt="Grapevin" />
+        </div>
+        <div class="item">
+          <div class="cover">
+            <div class="buttons double">
+              <a href="stik/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="http://www.stik.com/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+            </div>
+          </div>
+          <div class="heading">
+            <h1>Stik.com</h1>
+            <p class="type">Web App</p>
+          </div>
+          <img src="stik/thumb.png" alt="Stik" />
+        </div>
       </div>
-      <div id="content">
-        <!-- Main site content -->
-  
+      <div id="secondary">
         <div class="item">
-          <div class="description">
-            <h3>Design for Programmers</h3>
-            <p>In the week leading up to the <a href="http://www.tartanhacks.com">TartanHacks</a> at Carnegie Mellon, I delivered this presentation introducing web design concepts to an audience of hackathon participants, primarily computer science students.</p>
-            <p>Both the visuals and the content of the presentation were made from scratch and reflect some of the important lessons I've learned in the past years as I've explored the world of design.</p>
+          <div class="cover">
+            <div class="buttons">
+              <a href="vote4/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
           </div>
-          <div class="presentation">
-            <script src="http://speakerdeck.com/embed/4f2df9465fd7de001f008eae.js"></script>
+          <div class="heading">
+            <h1>Vote 4</h1>
+            <p class="type">Mobile App</p>
           </div>
-        </div>  
-        <div class="item">
-          <div class="description">
-            <h3>Tripi</h3>
-            <p>Tripi was my <a href="http://developer.yahoo.com/hacku/" title="Yahoo! Hack U" target="_blank">Yahoo! Hack U</a> 2011 project. In 24 hours, three other students and I devised and built this travel itinerary planner. I worked all around the project on front-end and back-end development, logo and user interface design, project vision, and team management.</p>
-
-            <p>Centered around simplicity and automation, Tripi provides useful metadata for destinations and suggesting relevant nearby places as the user completes their itinerary.
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>JavaScript</li>
-              <li>Node.js</li>
-              <li>MongoDB</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Illustrator</li>
-            </ul>
-          </div>
-          <img src="work/tripi.png" alt="Tripi" />
+          <img src="vote4/thumb.png" alt="Vote 4" />
         </div>
         <div class="item">
-          <div class="description">
-            <h3>Coursel <a href="http://coursel.net" title="Coursel" target="_blank">&rarr;</a></h3>
-            <p>Calculating GPA is a common task for students, but it can be surprisingly painful even though all it requires is simple arithmetic. Coursel's built to automate this process. It's a "scratch my own itch" kind of thing.</p>
-
-            <p>It's fully client-side and uses some interesting technologies, which you can <a href="https://github.com/cleercode/coursel" title="Coursel on GitHub" target="_blank">explore on GitHub</a>.</p>
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>Backbone.js</li>
-              <li>localStorage</li>
-              <li>jQuery</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
+          <div class="cover">
+            <div class="buttons">
+              <a href="bonsai/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
           </div>
-          <img src="work/coursel.png" alt="Coursel" />
+          <div class="heading">
+            <h1>Bonsai</h1>
+            <p class="type">Web App</p>
+          </div>
+          <img src="bonsai/thumb.png" alt="Bonsai" />
         </div>
         <div class="item">
-          <div class="description">
-            <h3>Grapevin</h3>
-            <p>Grapevin was a project to allow people to express themselves through the music they enjoy. It allowed users to easily create an interactive playlist of their favorite songs to share with their friends. After the rise of other social music services like Spotify and Rdio, I decided to cease development of Grapevin.</p>
-
-            <p>You can read a little interview about my vision for Grapevin <a href="http://www.madebyone.com/grapevin" title="Grapevin on Made By One" target="_blank">here</a>.</p>
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>Ruby on Rails</li>
-              <li>jQuery</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
+          <div class="cover">
+            <div class="buttons double">
+              <a href="acf/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="http://acfpcc.org/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
+            </div>
           </div>
-          <img src="work/grapevin.png" alt="Grapevin" />
+          <div class="heading">
+            <h1>ACF</h1>
+            <p class="type">Website</p>
+          </div>
+          <img src="acf/thumb.png" alt="Asian Christian Fellowship" />
         </div>
         <div class="item">
-          <div class="description">
-            <h3>Stik.com <a href="http://stik.com" title="Stik.com" target="_blank">&rarr;</a></h3>
-            <p>Over summer 2010, I interned at Stik.com, a tiny San Francisco startup using the Facebook network to facilitate business connections.</p>
-            <p>Leveraging my experience in both design and development, I completely overhauled the design of the site and implemented major functionality.</p>
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>PHP</li>
-              <li>MySQL</li>
-              <li>jQuery</li>
-              <li>MooTools</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Photoshop</li>
-              <li>Illustrator</li>
-            </ul>
+          <div class="cover">
+            <div class="buttons">
+              <a href="tripi/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
           </div>
-          <img src="work/stik.png" alt="Stik" />
+          <div class="heading">
+            <h1>Tripi</h1>
+            <p class="type">Web App</p>
+          </div>
+          <img src="tripi/thumb.png" alt="Tripi" />
         </div>
         <div class="item">
-          <div class="description">
-            <h3>Asian Christian Fellowship <a href="http://acfpcc.org" title="Asian Christian Fellowship" target="_blank">&rarr;</a></h3>
-            <p>Suffice it to say that I believe in Jesus Christ as the God of heaven and earth and the necessary salvation of the human race. This site was designed and built for a college Christian fellowship.</p>
-
-            <p>It uses CSS3 and web fonts to a great degree, with minimal images. With the exception of some minor polishing, the entire design and code process took a day. I constructed a Tumblr blog theme for the announcements page to match the static content.</p>
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
+          <div class="cover">
+            <div class="buttons">
+              <a href="shelf/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
           </div>
-          <img src="work/acf.png" alt="Asian Christian Fellowship" />
-        </div>     
-        <div class="item">
-          <div class="description">
-            <h3>Kittygram! <a href="http://kittygram.heroku.com" title="Kittygram!" target="_blank">&rarr;</a></h3>
-            <p>Everyone loves cat photos. Don't you love cat photos?</p>
-
-            <p>Kittygram! is a simple, fun way to view live cat photos from <a href="http://instagram.com/" title="Instagram" target="_blank">Instagram</a> users around the world.</p>
-
-            <p>And it's open source. You can <a href="https://github.com/cleercode/kittygram" title="Kittygram! on GitHub" target="_blank">check out the source code on GitHub</a>.</p>
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>Ruby &amp; Sinatra</li>
-              <li>Redis</li>
-              <li>jQuery</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
+          <div class="heading">
+            <h1>Shelf</h1>
+            <p class="type">Web App</p>
           </div>
-          <img src="work/kittygram.png" alt="Kittygram!" />
+          <img src="shelf/thumb.png" alt="Shelf" />
         </div>
         <div class="item">
-          <div class="description">
-            <h3>Easy Legal Billing</h3>
-            <p>The creators of this online billing application sought me out for a visual refresh of their landing page.</p>
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>Photoshop</li>
-            </ul>
+          <div class="cover">
+            <div class="buttons">
+              <a href="waypoint/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
           </div>
-          <img src="work/easylegalbilling.png" alt="Easy Legal Billing" />
+          <div class="heading">
+            <h1>Waypoint</h1>
+            <p class="type">Device</p>
+          </div>
+          <img src="waypoint/thumb.png" alt="Waypoint" />
         </div>
         <div class="item">
-          <div class="description">
-            <h3>Fire Emblem: <br/>Immortal Sword <a href="http://bwdyeti.com/fe7x" title="Fire Emblem: Immortal Sword" target="_blank">&rarr;</a></h3>
-            <p>I designed and coded the website for a fan-made spinoff of a popular video game series.</p>
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Photoshop</li>
-              <li>Illustrator</li>
-            </ul>
+          <div class="cover">
+            <div class="buttons">
+              <a href="hcii/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
           </div>
-          <img src="work/fe7x.png" alt="Fire Emblem: Immortal Sword" />
+          <div class="heading">
+            <h1>HCI Institute</h1>
+            <p class="type">Website</p>
+          </div>
+          <img src="hcii/thumb.png" alt="HCI Institute" />
         </div>
         <div class="item">
-          <div class="description">
-            <h3>Symphony</h3>
-            <p>For Yahoo!'s annual <a href="http://developer.yahoo.com/hacku/" title="Yahoo! Hack U" target="_blank">Hack U</a> competition, I developed this music recommendation web application in less than a full day. The simple grid of recommendations displays a large number of recommendations concisely and attractively.</p>
-
-            <h4>Technologies</h4>
-            <ul>
-              <li>jQuery</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
+          <div class="cover">
+            <div class="buttons">
+              <a href="symphony/index.html" class="info"><div class="icon"></div>Info</a>
+            </div>
           </div>
-          <img src="work/symphony.png" alt="Symphony" />
+          <div class="heading">
+            <h1>Symphony</h1>
+            <p class="type">Web App</p>
+          </div>
+          <img src="symphony/thumb.png" alt="Symphony" />
         </div>
-        
-        <!-- End main site content -->
-        
       </div>
-      <div id="footer">
-        <p>Thanks for visiting! <a href="mailto:chris@chrsl.net">Would you like to contact me?</a></p>
-        <a href="#" id="back_to_top" title="Back to the top">&uarr;</a>
+    </div>
+    <!-- End main site content -->
+
+    <footer>
+      <div id="heading">
+        <h1>About Me</h1>
       </div>
+      <div id="info">
+        <img src="photo.jpg" alt="Chris Lee">
+        <div id="description">
+          <p>I'm an interaction designer with a technical background: one of those <a href="http://www.inc.com/garry-tan/the-great-value-of-the-designer-who-codes.html" target="_blank">&ldquo;designers who code.&rdquo;</a> I like to make things (mainly software things), and I aspire to make things that solve real societal problems. I'm also finishing up studying human-computer interaction, computer science, and communication design at <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>.</p>
+          <p>I'm currently a interning with the <a href="http://www.mozilla.org/" target="_blank">Mozilla Firefox</a> <a href="http://blog.mozilla.org/ux/" target="_blank">UX Design</a> team. Previously, I worked at <a href="http://www.stik.com/" target="_blank">Stik</a> as a front-end developer/designer and <a href="http://www.learnboost.com/" target="_blank">LearnBoost</a> as a generalist developer.</p>
+        </div>
+      </div>
+      <div id="links">
+        <ul>
+          <li id="email"><h4>Email</h4> <a href="mailto:chris@chrsl.net">chris@chrsl.net</a></li>
+          <li id="resume"><h4>Resume</h4> <a href="resume.pdf">Download</a></li>
+          <li id="elsewhere"><h4>Elsewhere</h4> <ul>
+            <li><a href="http://dribbble.com/Cleer" target="_blank">Dribbble</a> (design)</li>
+            <li><a href="https://github.com/cleercode" target="_blank">GitHub</a> (code)</li>
+            <li><a href="http://linkedin.com/in/cleer" target="_blank">LinkedIn</a> (work)</li>
+            <li><a href="http://qr.ae/hBc" target="_blank">Quora</a> (q&amp;a)</li>
+          </ul></li>
+        </ul>
+      </div>
+      <div id="verse">
+        <p>For the love of Christ controls us, because we have concluded this: that one has died for all, therefore all have died; and he died for all, that those who live might no longer live for themselves but for him who for their sake died and was raised.</p>
+      </div>
+    </footer>
 
-      <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-19583432-1']);
-        _gaq.push(['_trackPageview']);
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-19583432-1']);
+      _gaq.push(['_trackPageview']);
 
-        (function() {
-         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-         })();
-       </script>
-     </body>
-   </html>
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+     })();
+   </script>
+  </body>
+</html>
