Avoid subdirectory collision :|

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="gospel/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="thegospel/index.html" class="info"><div class="icon"></div>Info</a>
               <a href="http://chrsl.net/gospel/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -44,7 +44,7 @@
             <h1>The Gospel</h1>
             <p class="type">Website</p>
           </div>
-          <img src="gospel/thumb.png" alt="The Gospel" />
+          <img src="thegospel/thumb.png" alt="The Gospel" />
         </div>
         <div class="item">
           <div class="cover">
