--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div id="logo">
         <div id="pulse"></div>
-        <a href="index.html" id="circle">
+        <a href="/" id="circle">
           <span id="name">Chris Lee</span>
           <span id="tagline">Design &amp; Code</span>
         </a>
@@ -24,7 +24,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="snappy/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/snappy/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
@@ -36,7 +36,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="thegospel/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/thegospel/" class="info"><div class="icon"></div>Info</a>
               <a href="http://chrsl.net/gospel/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -49,7 +49,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="designforprogrammers/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="designforprogrammers/" class="info"><div class="icon"></div>Info</a>
               <a href="https://speakerdeck.com/u/cleer/p/design-for-programmers" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -62,7 +62,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="coursel/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/coursel/" class="info"><div class="icon"></div>Info</a>
               <a href="http://coursel.net/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -75,7 +75,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="grapevin/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/grapevin/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
@@ -87,7 +87,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="stik/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/stik/" class="info"><div class="icon"></div>Info</a>
               <a href="http://www.stik.com/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -102,7 +102,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="vote4/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/vote4/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
@@ -114,7 +114,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="bonsai/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/bonsai/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
@@ -126,7 +126,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons double">
-              <a href="acf/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/acf/" class="info"><div class="icon"></div>Info</a>
               <a href="http://acfpcc.org/" class="visit" target="_blank"><div class="icon"></div>Visit</a>
             </div>
           </div>
@@ -139,7 +139,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="tripi/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/tripi/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
@@ -151,7 +151,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="shelf/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/shelf/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
@@ -163,7 +163,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="waypoint/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/waypoint/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
@@ -175,7 +175,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="hcii/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/hcii/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
@@ -187,7 +187,7 @@
         <div class="item">
           <div class="cover">
             <div class="buttons">
-              <a href="symphony/index.html" class="info"><div class="icon"></div>Info</a>
+              <a href="/symphony/" class="info"><div class="icon"></div>Info</a>
             </div>
           </div>
           <div class="heading">
