--- a/symphony/index.html
+++ b/symphony/index.html
@@ -11,7 +11,7 @@
     <header>
       <div id="logo">
         <div id="pulse"></div>
-        <a href="../index.html" id="circle">
+        <a href="/" id="circle">
           <span id="name">Chris Lee</span>
           <span id="tagline">Design &amp; Code</span>
         </a>
